# test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1aa69286674e_initial_migration.py  b583d5805e39_initial_tables.py
routers/: contact.py  lead.py  operator.py  operator_source_weight.py  routers.py  source.py
schemas/: contact.py  lead.py  operator.py  operator_source_weight.py  source.py
services/: __init__.py  contact_service.py  lead.py  operator.py  operator_source_weight.py  service.py  source.py
shemas/: contact.py
src/: config.py  database.py  main.py  models.py
